--- a/styles/index.css
+++ b/styles/index.css
@@ -23,8 +23,7 @@
 
 .content {
   width: 30rem;
-  margin: auto;
-  margin-top: 5rem;
+  margin: clamp(0px, 10vh, 5rem) auto;
 }
 
 /********** HOME **********/
